--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.2.0"
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.2.0",
+    "web-bluetooth": "^0.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
