Edición de application.properties para permitir acceso a h2-database

--- a/ioh-api/src/main/resources/application.properties
+++ b/ioh-api/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.h2.console.path=/h2-console
 #spring.h2.console.settings.trace=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Para conectar a la base de datos
+spring.h2.console.settings.web-allow-others=true
 
 # H2 in-memory database
 spring.datasource.url=jdbc:h2:mem:isst
@@ -25,3 +27,4 @@ spring.jpa.hibernate.ddl-auto=create
 # Default database user and password
 spring.datasource.username=sa
 spring.datasource.password=
+
