Añadida la capa de lógica de Seam. Un host se registra con su API Key de Seam y se generan las cerraduras en el sistema. Aún hay que tratar algunos casos más.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,13 +2,21 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "com.demoseam.Main",
+            "projectName": "seam-demo"
+        },
+        {
+            "type": "java",
             "name": "Spring Boot-IohApiApplication<ioh-api>",
             "request": "launch",
             "cwd": "${workspaceFolder}",
             "mainClass": "es.upm.dit.isst.ioh_api.IohApiApplication",
             "projectName": "ioh-api",
             "args": "",
-            "envFile": "${workspaceFolder}/.env"
+            "envFile": "${workspaceFolder}/.env",
+            "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=51279 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=ioh-api"
         }
     ]
 }
