--- a/ioh-api/pom.xml
+++ b/ioh-api/pom.xml
@@ -71,6 +71,12 @@
   		<groupId>org.springframework.security</groupId>
   			<artifactId>spring-security-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.github.seamapi</groupId>
+			<artifactId>java</artifactId>
+			<version>0.2.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
