--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "web-bluetooth": "^0.1.2"
   },
   "devDependencies": {
