--- a/ioh-api/pom.xml
+++ b/ioh-api/pom.xml
@@ -72,6 +72,10 @@
   			<artifactId>spring-security-core</artifactId>
 		</dependency>
 		<dependency>
+  		<groupId>com.fasterxml.jackson.datatype</groupId>
+  		<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.github.seamapi</groupId>
 			<artifactId>java</artifactId>
 			<version>0.2.0</version>
