--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-native-google-signin/google-signin": "^13.2.0",
+    "@react-oauth/google": "^0.12.1",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-native-app-auth": "^8.0.2",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
     "web-bluetooth": "^0.1.2"
