--- a/ioh-api/pom.xml
+++ b/ioh-api/pom.xml
@@ -76,6 +76,10 @@
   		<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
 		<dependency>
+    	<groupId>com.fasterxml.jackson.datatype</groupId>
+    	<artifactId>jackson-datatype-jdk8</artifactId>
+</dependency>
+		<dependency>
 			<groupId>io.github.seamapi</groupId>
 			<artifactId>java</artifactId>
 			<version>0.2.0</version>
