--- a/ioh-api/pom.xml
+++ b/ioh-api/pom.xml
@@ -78,13 +78,36 @@
 		<dependency>
     	<groupId>com.fasterxml.jackson.datatype</groupId>
     	<artifactId>jackson-datatype-jdk8</artifactId>
-</dependency>
+		</dependency>
 		<dependency>
 			<groupId>io.github.seamapi</groupId>
 			<artifactId>java</artifactId>
 			<version>0.2.0</version>
 		</dependency>
+		<!-- web security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.11.5</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.11.5</version>
+			<scope>runtime</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
