Añadida conexión segura con TLS. Leer el TLS readme para probar en desarrollo.

--- a/ioh-api/src/main/resources/application.properties
+++ b/ioh-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ioh-api
 
 # Server settings
-server.port=8080
+# server.port=8080
 
 # Default REST controller for running without custom REST implementation
 spring.data.rest.basePath=/api
@@ -27,4 +27,11 @@ spring.jpa.hibernate.ddl-auto=create
 # Default database user and password
 spring.datasource.username=sa
 spring.datasource.password=
+
+# Spring Security settings
+server.ssl.key-password=${SSL_KEY_PASSWORD}
+server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD}
+server.ssl.key-store=${SSL_KEYS_STORE_PATH}
+server.ssl.enabled=true
+server.port=8443
 
