--- a/ioh-api/pom.xml
+++ b/ioh-api/pom.xml
@@ -108,6 +108,12 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
